# elysian-universe-site-seeder-eve-online-evejs

./: .gitattributes  .gitignore  AUTHORS.md  Cargo.toml  Install.bat  Install.sh  NOTICE  README.md  StartUniverseSeeder.bat  StartUniverseSeeder.sh  seed_universe_sites.js
.github/workflows/: ci.yml
data/spec/: dungeonSpawnProfiles.json
scripts/release/: New-ReleasePackage.ps1
scripts/windows/: Install-ElysianUniverseSeeder.ps1  StartUniverseSeeder.ps1
src/: main.rs
