[package]
name = "universe-site-seed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "wgpu", "x11", "wayland"] }
egui = { version = "0.31", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
